--- a/css/reset.css
+++ b/css/reset.css
@@ -25,6 +25,7 @@ a:active {
 
 a {
 	color: inherit;
+	display: inline-block;
 }
 
 a, a:link, a:visited  {
@@ -88,7 +89,8 @@ button, input[type="submit"] {
 }
 
 input:focus, input:active,
-button:focus, button:active {
+button:focus, button:active,
+textarea {
     outline: none;
 }
 
